
[project]
name = "stateful-tools"
version = "0.1.0"
description = "FastAPI server demonstrating stateful tools with session management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]

[tool.uv]
dev-dependencies = []
